<resources>
    <string name="app_name">embeauty</string>
    <string name="sou_salao">Sou Salão</string>
    <string name="sou_cliente">Sou Cliente</string>
    <string name="bem_vinda_ao_embeauty">Bem-vinda ao embeauty!</string>
    <string name="login_salao">Login - Salão</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="ainda_nao_possui_cadastro">Ainda não possui cadastro?</string>
    <string name="login_cliente">Login - Cliente</string>
    <string name="cadastre_seu_salao">Cadastre seu salão</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entre_aqui">Entre aqui!</string>
    <string name="ja_possui_cadastro">Já possui cadastro?</string>
    <string name="cadastre_se_client">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="faca_o_seu_cadastro">Faça o seu cadastro</string>
    <string name="telefone">Telefone</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bem_vinda_o">bem-vinda(o),</string>
</resources>
