<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bem_vinda_ao_embeauty"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"/>

    <ImageView
        android:id="@+id/image_landing_page"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/landing_page_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>
    
    <LinearLayout
        android:id="@+id/landing_page_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/image_landing_page"
        android:gravity="center">
        
        
        <Button
            android:id="@+id/button_landing_page_salon"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/sou_salao"
            />

        <Button
            android:id="@+id/button_landing_page_client"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/sou_cliente" />

    </LinearLayout>

</RelativeLayout>
